# rag_template

./: .env.example  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  INGESTION.md  LICENSE  Makefile  README.md  compose.yaml  dev.env  e2e.env  pyproject copy.toml  pyproject.toml  reproduce_issue.py  run_app.sh
backend/notebooks/: api_requests.ipynb  data_ingestion.ipynb  qdrant_crud.ipynb
backend/qdrant_storage/: raft_state.json
backend/scripts/: ingest_documents.py  onnx_conversion.py  onnx_test.py
backend/src/api/: config.py  main.py  rag.py  routes.py
backend/src/api/v1/: router.py  schema.py
backend/src/app/: config.py  dependencies.py  exceptions.py  handlers.py  ingestion.py  logging.py  main.py  middleware.py  retry.py  schemas.py  utils.py
backend/src/app/core/: router.py
backend/src/app/prompts/: generation.yaml
backend/src/app/services/: generation.py  retrieval.py
backend/src/app/v1/: router.py  schema.py
backend/tests/: conftest.py  test_ingestion.py  test_routes.py  test_services.py
backend/tests/e2e/: conftest.py  test_api_flow.py  test_health.py
backend/tests/unit/: test_exceptions.py  test_ingestion.py  test_retry.py  test_services.py
backend/tests/unit/core/: test_core_health.py
backend/tests/unit/services/: test_batch_embedding.py  test_generation.py  test_generation_errors.py  (+2 more)
backend/tests/v1/: test_chat_rag.py  test_collections.py  test_v1_health.py
ingestion/: Dockerfile  pyproject.toml
ingestion/src/ingestion/: chunker.py  config.py  loader.py  main.py
ingestion/tests/: test_chunker.py
(+18 files in other folders)
