[project]
name = "backend"
version = "0.1.0"
description = "backend"
authors = [{"name" = "Steffen Häußler", email = "steffen.haeussler.work@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "ipdb>=0.13.13",
    "ipynb>=0.5.1",
    "jupyter>=1.1.1",
    "litellm>=1.50.0",
    "loguru>=0.7.3",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "optimum>=1.25.3",
    "optimum-onnx[onnxruntime]>=0.1.0",
    "pydantic-settings>=2.7.1",
    "qdrant-client>=1.14.2",
    "transformers>=4.40.0",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.venv",
    "*/__pycache__",
    "/.pytest_cache",
    "/dist",
    ".coverage",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
]

[tool.ruff]
configuration = "ruff.toml"

