[project]
name = "ingestion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
